<resources>
    <string name="app_name">Activity Result</string>
    <string name="testActivity">testActivity</string>
    <string name="oncreate">OnCreate</string>
    <string name="onstart">OnStart</string>
    <string name="onresume">OnResume</string>
    <string name="onpause">OnPause</string>
    <string name="onstop">OnStop</string>
    <string name="ondestroy">OnDestroy</string>
</resources>
