<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="by.example.root.activityresult.Main2Activity">

    <TableLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/activityOnCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oncreate" />

            <TextView
                android:id="@+id/countOnCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/activityOnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onstart" />

            <TextView
                android:id="@+id/countOnStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/activityOnResume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onresume" />

            <TextView
                android:id="@+id/countOnResume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/activityOnPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onpause" />

            <TextView
                android:id="@+id/countOnPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/activityOnStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onstop" />

            <TextView
                android:id="@+id/countOnStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/activityOnDestroy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ondestroy" />

            <TextView
                android:id="@+id/countOnDestroy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>
